file ready
