# api/models/file.go
@@ -1,0 +1,11 @@
+package models
+
+import "mime/multipart"
+
+type File struct {
+	File *multipart.FileHeader `form:"file" binding:"required"`
+}
+
+type Path struct {
+	Filename string `json:"filename"`
+}
